# qtlifx

./: .gitignore  CMakeLists.txt  README  README.md  doxyfile  index.html  qtlifx.kdev4  qtlifx.pro
examples/: CMakeLists.txt  lifxapplication.cpp  lifxapplication.h  lightbulb.cpp  lightbulb.h  main.cpp
examples/decoder/: CMakeLists.txt  main .cpp
examples/discover/: CMakeLists.txt  lifxapplication.cpp  lifxapplication.h  lightbulb.cpp  lightbulb.h  overnight.cpp  overnight.h  program.cpp  program.h  xycolor.cpp  xycolor.h
examples/discover/statemachines/: dimstate.cpp  dimstate.h  morningstate.cpp  morningstate.h  offstate.cpp  offstate.h  onstate.cpp  onstate.h
html/: annotated.html  classHSBK-members.html  classHSBK.html  classLifxBulb-members.html  classLifxBulb.html  classLifxGroup-members.html  classLifxGroup.html  classLifxManager-members.html  classLifxManager.html  classLifxManager__coll__graph.map  classLifxManager__coll__graph.md5  classLifxManager__inherit__graph.map  classLifxManager__inherit__graph.md5  classLifxPacket-members.html  classLifxPacket.html  classLifxProduct-members.html  classLifxProduct.html  classLifxProtocol-members.html  classLifxProtocol.html  classLifxProtocol__coll__graph.map  classLifxProtocol__coll__graph.md5  classLifxProtocol__inherit__graph.map  classLifxProtocol__inherit__graph.md5  classes.html  defines_8h_source.html  dir_658a662c94228dc739cf285415f318a2.html  dir_6fe7104faef11dadb989007e3a306bab.html  dir_9e19b068db61fca2a3c6adc8d54ccb78.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  hsbk_8h_source.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  (+47 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  (+34 more)
latex/: annotated.tex  classHSBK.tex  classLifxBulb.tex  classLifxGroup.tex  classLifxManager.tex  classLifxManager__coll__graph.md5  classLifxManager__inherit__graph.md5  classLifxPacket.tex  classLifxProduct.tex  classLifxProtocol.tex  classLifxProtocol__coll__graph.md5  classLifxProtocol__inherit__graph.md5  hierarchy.tex  index.tex  refman.tex  structlx__dev__color__t.tex  structlx__dev__firmware__t.tex  structlx__dev__lightstate__t.tex  structlx__dev__power__t.tex  structlx__dev__service__t.tex  structlx__dev__version__t.tex  structlx__group__info__t.tex  structlx__protocol__header__t.tex
private/: lifxpacket.h
public/: defines.h  hsbk.h  lifxbulb.h  lifxgroup.h  lifxmanager.h  lifxpacket.h  lifxproduct.h  lifxprotocol.h
src/: defines.h  hsbk.cpp  lifxbulb.cpp  lifxbulb.h  lifxgroup.cpp  lifxgroup.h  lifxmanager.cpp  lifxmanager.h  lifxpacket.cpp  lifxpacket.h  lifxproduct.cpp  lifxproduct.h  lifxprotocol.cpp  lifxprotocol.h  lightmanager.cpp  lightmanager.h  main.cpp  qtlifx.cpp  qtlifx.h  qtlifx.ui
